<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
        <groupId>io.mosip.esignet.mock</groupId>
        <artifactId>esignet-mock-parent</artifactId>
        <version>0.11.1-SNAPSHOT</version>
   </parent>

  <artifactId>mock-identity-system</artifactId>
	<version>0.11.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>mock-identity-system</name>
  <description>Mockup of a ID system that is used to showcase the integration with e-Signet</description>
  <url>https://github.com/mosip/esignet-mock-services</url>
  
	<licenses>
		<license>
			<name>MPL 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/mosip/esignet-mock-services.git</connection>
		<developerConnection>scm:git:ssh://github.com:mosip/esignet-mock-services.git</developerConnection>
		<url>https://github.com/mosip/esignet-mock-services</url>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
			<id>ossrh-central</id>
			<name>MavenCentralRepository</name>
			<url>https://central.sonatype.com/repository/maven-snapshots</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central</id>
			<name>MavenCentral</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://central.sonatype.com/api/v1/publisher</url>
		</repository>
	</distributionManagement>

 <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
		<h2.version>1.4.197</h2.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	    <swagger.version>2.9.2</swagger.version>
		<springdoc.version>1.8.0</springdoc.version>
		<doclint>none</doclint>

		<!-- Maven -->
		<maven-compiler-plugin.source>11</maven-compiler-plugin.source>
		<maven-compiler-plugin.target>11</maven-compiler-plugin.target>
		<maven-compiler-plugin.version>2.4</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
		<maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
		<maven-source-plugin>2.2.1</maven-source-plugin>
        <nexus-staging-maven-plugin>1.6.7</nexus-staging-maven-plugin>
		<git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>

		<!-- Core -->
		<spring-cloud-config.version>2.2.7.RELEASE</spring-cloud-config.version>
		<spring-jms.version>5.0.16.RELEASE</spring-jms.version>


		<!--  Others -->
		<postgresql.version>42.2.16</postgresql.version>
		<json-simple.version>1.1</json-simple.version>
		<jackson.version>2.11.3</jackson.version>
		<gson.version>2.8.6</gson.version>
		<logback.version>1.2.3</logback.version>
		<h2-database-engine.version>1.4.200</h2-database-engine.version>

		<springdoc.version>1.8.0</springdoc.version>
		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
		<maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
	 	<nexus.staging.maven.plugin.version>1.6.7</nexus.staging.maven.plugin.version>
  </properties>
 <dependencies>
    <dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
   	 	</dependency>
   	 	
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		 	<groupId>org.springframework.cloud</groupId>
		 	<artifactId>spring-cloud-starter-config</artifactId>
		 	<version>${spring-cloud-config.version}</version>
	 	</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
			</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.27.0-GA</version>
		</dependency>
	 <dependency>
		 <groupId>com.google.guava</groupId>
		 <artifactId>guava</artifactId>
		 <version>32.0.0-jre</version>
	 </dependency>
	 <dependency>
		 <groupId>org.springframework.boot</groupId>
		 <artifactId>spring-boot-starter-data-redis</artifactId>
	 </dependency>
		 <dependency>
			 <groupId>io.mosip.kernel</groupId>
			 <artifactId>kernel-keymanager-service</artifactId>
			 <version>1.2.2.0-SNAPSHOT</version>
			 <classifier>lib</classifier>
			 <exclusions>
				 <exclusion>
					 <groupId>org.springframework.boot</groupId>
					 <artifactId>spring-boot-starter-security</artifactId>
				 </exclusion>
				 <exclusion>
					 <groupId>org.springframework.security</groupId>
					 <artifactId>spring-security-test</artifactId>
				 </exclusion>
				 <exclusion>
					 <groupId>com.fasterxml.jackson.core</groupId>
					 <artifactId>jackson-databind</artifactId>
				 </exclusion>
			 </exclusions>
		 </dependency>

	 <dependency>
		 <groupId>com.networknt</groupId>
		 <artifactId>json-schema-validator</artifactId>
		 <version>1.5.1</version>
		 <exclusions>
			 <exclusion>
				 <groupId>com.fasterxml.jackson.core</groupId>
				 <artifactId>jackson-core</artifactId>
			 </exclusion>
			 <exclusion>
				 <groupId>com.fasterxml.jackson.core</groupId>
				 <artifactId>jackson-annotations</artifactId>
			 </exclusion>
			 <exclusion>
				 <groupId>com.fasterxml.jackson.core</groupId>
				 <artifactId>jackson-databind</artifactId>
			 </exclusion>
		 </exclusions>
	 </dependency>
	 <dependency>
		 <groupId>com.fasterxml.jackson.core</groupId>
		 <artifactId>jackson-databind</artifactId>
		 <version>2.12.1</version>
	 </dependency>
	 <dependency>
		 <groupId>com.fasterxml.jackson.core</groupId>
		 <artifactId>jackson-core</artifactId>
		 <version>2.12.1</version>
	 </dependency>
	 <dependency>
		 <groupId>com.fasterxml.jackson.core</groupId>
		 <artifactId>jackson-annotations</artifactId>
		 <version>2.12.1</version>
	 </dependency>
  </dependencies>
  <build>
		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<layout>ZIP</layout>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<attach>false</attach>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven.deploy.plugin.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>none</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
						<configuration>
							<skip>true</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>ossrh</publishingServerId>
					<autoPublish>false</autoPublish>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven-gpg-plugin.version}</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven-compiler-plugin.source}</source>
					<target>${maven-compiler-plugin.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
